--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-18 Wed 16:13]
+#+CAPTION: Clock summary at [2017-01-18 Wed 17:39]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *18:23* |       |       | 100.0 |
+| *Total time*                                                                | *19:47* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 18:23   |       |       | 100.0 |
-| Active                                                                      |         |  1:32 |       |   8.3 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |   8.3 |
-| COMPLETED Edit release notes for previous sprint                            |         | 16:51 |       |  91.7 |
-| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   4.6 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  56.0 |
-| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   7.3 |
-| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   8.1 |
-| COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   5.5 |
-| STARTED Add multi-language support                                          |         |       |  0:59 |   5.3 |
-| STARTED Add a type mapper                                                   |         |       |  0:18 |   1.6 |
+| Stories                                                                     | 19:47   |       |       | 100.0 |
+| Active                                                                      |         |  1:32 |       |   7.8 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |   7.8 |
+| COMPLETED Edit release notes for previous sprint                            |         | 18:15 |       |  92.2 |
+| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   4.3 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  52.1 |
+| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   6.7 |
+| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   7.5 |
+| COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   5.1 |
+| STARTED Add multi-language support                                          |         |       |  2:23 |  12.0 |
+| STARTED Add a type mapper                                                   |         |       |  0:18 |   1.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -251,6 +251,8 @@ While fixing this bug we hit a disk space issue on the debian box
 which resulted in delays.
 
 *** STARTED Add multi-language support                                :story:
+    CLOCK: [2017-01-18 Wed 17:15]--[2017-01-18 Wed 17:39] =>  0:24
+    CLOCK: [2017-01-18 Wed 16:14]--[2017-01-18 Wed 17:14] =>  1:00
     CLOCK: [2017-01-18 Wed 15:56]--[2017-01-18 Wed 16:13] =>  0:17
     CLOCK: [2017-01-18 Wed 14:29]--[2017-01-18 Wed 14:53] =>  0:24
     CLOCK: [2017-01-18 Wed 13:58]--[2017-01-18 Wed 14:10] =>  0:12
