--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-18 Wed 21:21]
+#+CAPTION: Clock summary at [2017-01-18 Wed 22:40]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *21:13* |       |       | 100.0 |
+| *Total time*                                                                | *22:29* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 21:13   |       |       | 100.0 |
-| Active                                                                      |         | 21:13 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |   7.2 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   2.7 |
-| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   4.0 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  48.5 |
-| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   6.3 |
-| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   7.0 |
-| COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   4.8 |
+| Stories                                                                     | 22:29   |       |       | 100.0 |
+| Active                                                                      |         | 22:29 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |   6.8 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   2.6 |
+| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   3.8 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  45.8 |
+| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   5.9 |
+| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   6.6 |
+| COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   4.5 |
 | COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   1.6 |
-| STARTED Add multi-language support                                          |         |       |  3:28 |  16.3 |
-| STARTED Add a type mapper                                                   |         |       |  0:18 |   1.4 |
+| STARTED Add multi-language support                                          |         |       |  4:44 |  21.1 |
+| STARTED Add a type mapper                                                   |         |       |  0:18 |   1.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -263,6 +263,9 @@ not match the kernel's.
 : 2017-01-18 20:54:38.534027 [ERROR] [utility.filesystem.file] Could not find directory: /home/marco/Development/DomainDrivenConsulting/dogen/build/output/gcc/Release/stage/bin/../test_data/TestModel/actual.upsilon/Zeta
 
 *** STARTED Add multi-language support                                :story:
+    CLOCK: [2017-01-18 Wed 22:26]--[2017-01-18 Wed 22:40] =>  0:14
+    CLOCK: [2017-01-18 Wed 22:20]--[2017-01-18 Wed 22:25] =>  0:05
+    CLOCK: [2017-01-18 Wed 21:22]--[2017-01-18 Wed 22:19] =>  0:57
     CLOCK: [2017-01-18 Wed 21:04]--[2017-01-18 Wed 21:21] =>  0:17
     CLOCK: [2017-01-18 Wed 19:01]--[2017-01-18 Wed 19:49] =>  0:48
     CLOCK: [2017-01-18 Wed 17:15]--[2017-01-18 Wed 17:39] =>  0:24
