--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-18 Wed 22:40]
+#+CAPTION: Clock summary at [2017-01-18 Wed 22:53]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *22:29* |       |       | 100.0 |
+| *Total time*                                                                | *22:41* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 22:29   |       |       | 100.0 |
-| Active                                                                      |         | 22:29 |       | 100.0 |
+| Stories                                                                     | 22:41   |       |       | 100.0 |
+| Active                                                                      |         | 22:41 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |   6.8 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   2.6 |
-| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   3.8 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  45.8 |
+| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   3.7 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  45.4 |
 | COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   5.9 |
-| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   6.6 |
+| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   6.5 |
 | COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   4.5 |
-| COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   1.6 |
-| STARTED Add multi-language support                                          |         |       |  4:44 |  21.1 |
+| COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   1.5 |
+| STARTED Add multi-language support                                          |         |       |  4:56 |  21.7 |
 | STARTED Add a type mapper                                                   |         |       |  0:18 |   1.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -263,6 +263,7 @@ not match the kernel's.
 : 2017-01-18 20:54:38.534027 [ERROR] [utility.filesystem.file] Could not find directory: /home/marco/Development/DomainDrivenConsulting/dogen/build/output/gcc/Release/stage/bin/../test_data/TestModel/actual.upsilon/Zeta
 
 *** STARTED Add multi-language support                                :story:
+    CLOCK: [2017-01-18 Wed 22:41]--[2017-01-18 Wed 22:53] =>  0:12
     CLOCK: [2017-01-18 Wed 22:26]--[2017-01-18 Wed 22:40] =>  0:14
     CLOCK: [2017-01-18 Wed 22:20]--[2017-01-18 Wed 22:25] =>  0:05
     CLOCK: [2017-01-18 Wed 21:22]--[2017-01-18 Wed 22:19] =>  0:57
