--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-19 Thu 14:36]
+#+CAPTION: Clock summary at [2017-01-19 Thu 16:18]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *26:05* |       |       | 100.0 |
+| *Total time*                                                                | *27:46* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 26:05   |       |       | 100.0 |
-| Active                                                                      |         | 26:05 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |   5.9 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   2.2 |
-| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   3.3 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  39.5 |
-| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   5.1 |
-| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   5.7 |
-| COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   3.9 |
+| Stories                                                                     | 27:46   |       |       | 100.0 |
+| Active                                                                      |         | 27:46 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |   5.5 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   2.1 |
+| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   3.1 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  37.1 |
+| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   4.8 |
+| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   5.3 |
+| COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   3.7 |
 | COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   1.3 |
-| STARTED Add multi-language support                                          |         |       |  5:36 |  21.5 |
-| STARTED Add a type mapper                                                   |         |       |  3:02 |  11.6 |
+| STARTED Add multi-language support                                          |         |       |  5:36 |  20.2 |
+| STARTED Add a type mapper                                                   |         |       |  4:43 |  17.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -350,6 +350,7 @@ future we will have the same requirement for LAM. We could:
   with an outputtable language.
 
 *** STARTED Add a type mapper                                         :story:
+    CLOCK: [2017-01-19 Thu 14:37]--[2017-01-19 Thu 16:18] =>  1:41
     CLOCK: [2017-01-19 Thu 14:15]--[2017-01-19 Thu 14:36] =>  0:21
     CLOCK: [2017-01-19 Thu 11:45]--[2017-01-19 Thu 12:03] =>  0:18
     CLOCK: [2017-01-19 Thu 11:23]--[2017-01-19 Thu 11:44] =>  0:21
