--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-21 Sat 09:46]
+#+CAPTION: Clock summary at [2017-01-21 Sat 10:05]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *30:53* |       |       | 100.0 |
+| *Total time*                                                                | *31:10* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 30:53   |       |       | 100.0 |
-| Active                                                                      |         | 30:53 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |   5.0 |
+| Stories                                                                     | 31:10   |       |       | 100.0 |
+| Active                                                                      |         | 31:10 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |   4.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.9 |
-| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   2.8 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  33.4 |
+| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   2.7 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  33.0 |
 | COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   4.3 |
 | COMPLETED Bind language to kernel                                           |         |       |  1:29 |   4.8 |
 | COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   3.3 |
 | COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   1.1 |
-| STARTED Add multi-language support                                          |         |       |  7:07 |  23.0 |
-| STARTED Add a type mapper                                                   |         |       |  6:19 |  20.5 |
+| STARTED Add multi-language support                                          |         |       |  7:24 |  23.7 |
+| STARTED Add a type mapper                                                   |         |       |  6:19 |  20.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -263,6 +263,7 @@ not match the kernel's.
 : 2017-01-18 20:54:38.534027 [ERROR] [utility.filesystem.file] Could not find directory: /home/marco/Development/DomainDrivenConsulting/dogen/build/output/gcc/Release/stage/bin/../test_data/TestModel/actual.upsilon/Zeta
 
 *** STARTED Add multi-language support                                :story:
+    CLOCK: [2017-01-21 Sat 09:47]--[2017-01-21 Sat 10:04] =>  0:17
     CLOCK: [2017-01-21 Sat 08:15]--[2017-01-21 Sat 09:46] =>  1:31
     CLOCK: [2017-01-18 Wed 23:24]--[2017-01-18 Wed 23:35] =>  0:11
     CLOCK: [2017-01-18 Wed 22:54]--[2017-01-18 Wed 23:23] =>  0:29
