--- a/doc/agile/product_backlog.org
+++ b/doc/agile/product_backlog.org
@@ -8479,6 +8479,12 @@ in dia mailinglist:
 - https://mail.gnome.org/archives/dia-list/2015-June/msg00013.html
 - https://mail.gnome.org/archives/dia-list/2015-June/msg00014.html
 
+See also:
+
+- [[http://blog.qt.io/blog/2017/01/23/qt-scxml-state-chart-support-qt-creator/][Qt SCXML and State Chart Support in Qt Creator]]
+- [[https://en.wikipedia.org/wiki/SCXML][SCXML (wikipedia)]]
+- [[https://www.w3.org/TR/scxml/][State Chart XML (SCXML): State Machine Notation for Control Abstraction]]
+
 *** Add reflection support by using model and type enums               :epic:
 
 #+begin_quote
